--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
+      <exec.mainClass>com.revature.App.java></exec.mainClass>
+    </dependency>
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.2.6</version>
     </dependency>
   </dependencies>
 </project>
